--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,7 @@ repos:
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.1.17 # Get the latest from: https://github.com/gruntwork-io/pre-commit/releases
     hooks:
-      #- id: terraform-fmt
-      - id: terraform-validate
+      - id: gofmt
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
     rev: v1.62.3
